# Rust-Rocket-Project

./: .gitignore  Cargo.toml  Rocket.toml
db/: dev.db
migrations/20210708082032_create_tasks_table/: up.sql
src/: main.rs  task.rs
src/controllers/: mod.rs  tasks_controller.rs
src/models/: mod.rs  task.rs
views/: layout.html.tera
views/tasks/: index.html.tera
