[package]
name = "project_test"
version = "0.1.0"
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["secrets", "tls", "json"] }
rocket_codegen = "0.5.0-rc.1"
rocket_sync_db_pools = { version = "0.1.0-rc.1", features = ["diesel_sqlite_pool"] }
rocket_dyn_templates = { version = "0.1.0-rc.1", features = ["tera"] }
diesel = { version = "1.4.0", features = ["sqlite", "r2d2"] }
diesel_migrations = "1.4.0"